Update code formatting and improve validation patterns across entities