@@ -72,9 +72,10 @@ public class CWorkflowStatusRelation extends CEntityDB<CWorkflowStatusRelation> 
 	)
 	private CWorkflowEntity workflowEntity;
 
-	public CWorkflowStatusRelation() {
+	protected CWorkflowStatusRelation() {}
+
+	public CWorkflowStatusRelation(@SuppressWarnings ("unused") final Boolean initializeDefaults) {
 		super(CWorkflowStatusRelation.class);
-		// should not be called directly
 		initializeDefaults();
 	}
 
@@ -104,10 +105,6 @@ public class CWorkflowStatusRelation extends CEntityDB<CWorkflowStatusRelation> 
 
 	@Override
 	public String toString() {
-		return String.format("WorkflowStatusRelation[workflow id=%s, from status id=%s, to status id=%s, roles=%s]",
-				workflowEntity != null ? CSpringAuxillaries.safeGetId(workflowEntity) : null,
-				fromStatus != null ? CSpringAuxillaries.safeGetId(fromStatus) : null,
-				toStatus != null ? CSpringAuxillaries.safeGetId(toStatus) : null,
-				roles != null ? roles.stream().map(CSpringAuxillaries::safeToString).collect(Collectors.joining(", ")) : "[]");
+		return "WorkflowStatusRelation[workflow id=%s, from status id=%s, to status id=%s, roles=%s]".formatted(workflowEntity != null ? CSpringAuxillaries.safeGetId(workflowEntity) : null, fromStatus != null ? CSpringAuxillaries.safeGetId(fromStatus) : null, toStatus != null ? CSpringAuxillaries.safeGetId(toStatus) : null, roles != null ? roles.stream().map(CSpringAuxillaries::safeToString).collect(Collectors.joining(", ")) : "[]");
 	}
 }
