@@ -72,9 +72,12 @@ public class CLink extends CEntityOfCompany<CLink> {
 	private String targetEntityType;
 
 	/** Default constructor for JPA. */
-	/** Default constructor for JPA. */
-	public CLink() {
-		super();
+										/** Default constructor for JPA. */
+	protected CLink() {}
+
+	public CLink(@SuppressWarnings ("unused") final Boolean initializeDefaults) {
+		super(CLink.class, "link", null);
+		initializeDefaults();
 	}
 
 	/** Constructor for creating a link between two entities.
@@ -103,17 +106,17 @@ public class CLink extends CEntityOfCompany<CLink> {
 		// Call parent first
 		super.copyEntityTo(target, serviceTarget, options);
 		// Type-check and cast
-		if (target instanceof CLink) {
-			final CLink targetLink = (CLink) target;
-			// Copy basic fields
-			copyField(this::getSourceEntityType, targetLink::setSourceEntityType);
-			copyField(this::getSourceEntityId, targetLink::setSourceEntityId);
-			copyField(this::getTargetEntityType, targetLink::setTargetEntityType);
-			copyField(this::getTargetEntityId, targetLink::setTargetEntityId);
-			copyField(this::getLinkType, targetLink::setLinkType);
-			copyField(this::getDescription, targetLink::setDescription);
-			LOGGER.debug("Successfully copied link fields to target");
+		if (!(target instanceof CLink targetLink)) {
+			return;
 		}
+		// Copy basic fields
+		copyField(this::getSourceEntityType, targetLink::setSourceEntityType);
+		copyField(this::getSourceEntityId, targetLink::setSourceEntityId);
+		copyField(this::getTargetEntityType, targetLink::setTargetEntityType);
+		copyField(this::getTargetEntityId, targetLink::setTargetEntityId);
+		copyField(this::getLinkType, targetLink::setLinkType);
+		copyField(this::getDescription, targetLink::setDescription);
+		LOGGER.debug("Successfully copied link fields to target");
 	}
 
 	@Override
@@ -185,7 +188,6 @@ public class CLink extends CEntityOfCompany<CLink> {
 
 	@Override
 	public String toString() {
-		return String.format("CLink{id=%d, %s#%d -> %s#%d, type=%s}", getId(), sourceEntityType, sourceEntityId, targetEntityType, targetEntityId,
-				linkType);
+		return "CLink{id=%d, %s#%d -> %s#%d, type=%s}".formatted(getId(), sourceEntityType, sourceEntityId, targetEntityType, targetEntityId, linkType);
 	}
 }
